--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -84,6 +84,7 @@
   background: rgba(var(--card-rgb), 0.1); /*rgba(var(--card-rgb), 0)*/
   border: 1px solid rgba(var(--card-border-rgb), 0);
   transition: background 200ms, border 200ms;
+  margin-bottom: 20px;
 }
 
 .card span {
