--- a/src/components/Sidebar/index.module.css
+++ b/src/components/Sidebar/index.module.css
@@ -1,8 +1,8 @@
 .sidebar {
-  height: 100vh;
+  height: auto;
   width: 16%;
   max-width: 16%;
-  position: fixed;
+  position: absolute;
   z-index: 1;
   transition: 0.3s ease;
 }
