--- a/src/components/Sidebar/index.module.css
+++ b/src/components/Sidebar/index.module.css
@@ -48,7 +48,7 @@
   box-shadow: none !important;
   background-color: transparent !important;
   color: inherit !important;
-  padding: 15px 0;
+  padding: 15px 0 !important;
 }
 
 .title {
