--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,6 +114,10 @@ a {
   --bs-btn-disabled-border-color: #8a50fc;
 }
 
+.bg-dark {
+  background-color: #1a1d21 !important;
+}
+
 .text-primary {
   color: #8247f9 !important;
 }
@@ -127,7 +131,7 @@ a {
 }
 
 .accordion-button.dark-acc-btn::after {
-  color: '#ffffff';
+  color: "#ffffff";
   background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/></svg>') !important;
 }
 
